# DevelopHelper

./: .gitignore  README.md  build.gradle  settings.gradle
android5/: build.gradle
android5/src/main/: AndroidManifest.xml
android5/src/main/java/com/develophelper/android5/: Constants.java
android5/src/main/java/com/develophelper/android5/activity/: Android5MainActivity.java  BaseActivity.java  ExplodeActivity.java  FadeActivity.java  ShareActivity.java  SlideActivity.java  TransitionsActivity.java  WidgetActivity.java
android5/src/main/res/drawable/: heart.xml  ic_fuwu.xml  myvector.xml  rainbow_list.xml  state_list.xml  vector_animation.xml
android5/src/main/res/layout/: activity_android5_main.xml  activity_animation.xml  activity_share.xml  activity_transitions.xml  fragment_animation.xml  fragment_drawable.xml  fragment_drawer.xml  fragment_shadow.xml  fragment_style.xml  grid_item.xml  staggered_grid_item_h.xml  widget_layout.xml
android5/src/main/res/menu/: main.xml
android5/src/main/res/values/: strings.xml  styles.xml
app/: .gitignore  build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/example/calculateconstraint/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: encode_instruction.html
app/src/main/java/com/actor/androiddevelophelper/: Global.java  MyApplication.java
app/src/main/java/com/actor/develop_helper/: Global.java  MyApplication.java
app/src/main/res/anim/: translate_up.xml
app/src/main/res/drawable/: animation_drawable_girl.xml  shape_drop_down_normal.xml  shape_rec_cor5dp_gray_ddd.xml
app/src/main/res/layout/: activity_animation.xml  activity_animation_drawable.xml  activity_animations.xml  activity_animator.xml  activity_animator_path.xml  activity_app_info.xml  activity_calculate_constrailt_layout.xml  activity_canvas_draw.xml  activity_encrypt.xml  activity_expandable_item.xml  activity_file_rename.xml  activity_github_host.xml  activity_github_issue_detail.xml  activity_glide_example.xml  activity_main.xml  activity_point1_apk_install.xml  activity_view_system_icon.xml  item_app.xml  item_expandable_lv1.xml  item_github_issues.xml  item_homemenu_layout.xml  item_view_system_icon.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/example/calculateconstraint/: ExampleUnitTest.java
cpp/: Android.mk  Application.mk  CMakeLists.txt  build.gradle
cpp/src/main/: AndroidManifest.xml
cpp/src/main/cpp/: Log.c  c-call-java.c  com_actor_cpptest_ConstUtils.h  const_utils.cpp  guo_lu_press.c  native-lib.c  plasma.c
cpp/src/main/java/com/actor/cpptest/: CCallJava.java  ConstUtils.java  GuoLuPress.java  JavaCallC.java
cpp/src/main/java/com/actor/cpptest/activity/: BaseActivity.java  CCallJavaActivity.java  PlasmaActivity.java
cpp/src/main/java/com/actor/cpptest/widget/: PlasmaView.java  PlasmaWaterRippleView.java  VerticalProgressBar.java
cpp/src/main/java/com/mt/mtxx/image/: JNI.java
cpp/src/main/res/layout/: activity_c_call_java.xml  activity_plasma.xml
gradle/wrapper/: gradle-wrapper.properties
(+116 files in other folders)
